--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "@types/multer": "^1.4.7",
     "@types/node": "^17.0.10",
     "@types/uuid": "^8.3.4",
+    "@typescript-eslint/eslint-plugin": "^5.10.1",
+    "@typescript-eslint/parser": "^5.10.1",
+    "eslint": "^8.7.0",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
