--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production node dist/app.js",
     "build": "tsc -p .",
-    "dev": "cross-env NODE_ENV=development nodemon --config nodemon.json src/app.ts"
+    "dev": "cross-env NODE_ENV=development nodemon --config nodemon.json src/app.ts",
+    "test": "jest --watchAll --collectCoverage"
   },
   "keywords": [],
   "author": "",
@@ -34,6 +35,7 @@
     "@types/morgan": "^1.9.3",
     "@types/multer": "^1.4.7",
     "@types/node": "^17.0.10",
+    "@types/supertest": "^2.0.12",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
@@ -44,8 +46,5 @@
     "ts-jest": "^28.0.7",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
-  },
-  "jest": {
-    "testEnvironment": "node"
   }
 }
