--- a/package.json
+++ b/package.json
@@ -14,16 +14,17 @@
   "license": "ISC",
   "dependencies": {
     "@sendgrid/mail": "^7.6.1",
+    "@types/node": "^18.6.5",
     "bcrypt": "^5.0.1",
     "cloudinary": "^1.28.1",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
-    "dotenv": "^14.2.0",
+    "dotenv": "^16.0.1",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.1.7",
+    "mongoose": "^6.5.1",
     "morgan": "^1.10.0",
-    "multer": "^1.4.4",
+    "multer": "^1.4.5-lts.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -34,7 +35,6 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/morgan": "^1.9.3",
     "@types/multer": "^1.4.7",
-    "@types/node": "^17.0.10",
     "@types/supertest": "^2.0.12",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
