--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production node dist/app.js",
     "build": "tsc -p .",
-    "dev": "cross-env NODE_ENV=development nodemon --config nodemon.json src/app.ts",
-    "test": "jest --watchAll --collectCoverage"
+    "dev": "cross-env NODE_ENV=development nodemon --config nodemon.json src/app.ts"
   },
   "keywords": [],
   "author": "",
@@ -23,27 +22,25 @@
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.1",
-    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "winston": "^3.8.2",
+    "winston-mongodb": "^5.1.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
-    "@types/jest": "^28.1.6",
     "@types/jsonwebtoken": "^8.5.8",
-    "@types/morgan": "^1.9.3",
     "@types/multer": "^1.4.7",
     "@types/supertest": "^2.0.12",
     "@types/uuid": "^8.3.4",
+    "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
     "eslint": "^8.7.0",
-    "jest": "^28.1.3",
     "nodemon": "^2.0.15",
     "supertest": "^6.2.4",
-    "ts-jest": "^28.0.7",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
   }
